# ondth

./: .gitignore  Cargo.toml  build.rs  deps.sh  flake.nix  readme.md  run.sh
.cargo/: config.toml
assets/: Base.fgd  weapons.json
assets/maps/: M1.map  Test.map  deathmatch_octothorp.map
crates/faststr/: Cargo.toml  bin.rs  lib.rs
crates/input_derive/: Cargo.toml  lib.rs
crates/integrity/: Cargo.toml  lib.rs
crates/macros/: Cargo.toml  lib.rs
crates/map_parser/: Cargo.toml  lib.rs  parser.rs
crates/qwak/: Cargo.toml  bin.rs  lib.rs
crates/qwak_helper_types/: Cargo.toml  lib.rs
crates/qwak_macro/: Cargo.toml  host.rs  lib.rs  plugin.rs
crates/qwak_shared/: Cargo.toml  lib.rs
crates/randomgen/: Cargo.toml  main.rs
crates/resources/: Cargo.toml  data.rs  entropy.rs  inputs.rs  lib.rs
qwaks/default/: Cargo.toml
qwaks/default/assets/: assets
qwaks/default/assets/maps/: M1.map  Test.map
qwaks/default/src/: lib.rs  pickups.rs  projectiles.rs  weapons.rs
qwaks/platty/: Cargo.toml
qwaks/platty/assets/: game.entropy
qwaks/platty/assets/maps/: test.map
qwaks/platty/assets/ui/: main_menu.kra
qwaks/platty/src/: lib.rs
qwaks/void/: Cargo.toml
qwaks/void/assets/: inputs.json  misc.entropy
qwaks/void/assets/maps/: test.map
qwaks/void/assets/maps/autosave/: test.1.map
qwaks/void/src/: lib.rs
src/: main.rs  plugins.rs  queries.rs  qwak_host_functions.rs
src/entities/: mod.rs  pickup.rs
src/mainmenu/: mod.rs
src/map_gen/: brush_interacts.rs  entities.rs  interactable.rs  mod.rs  poly.rs  world_entites.rs
src/map_gen/entities/: mod.rs
src/net/: client.rs  mod.rs  server.rs
src/player/: mod.rs  spawn.rs  update.rs
src/startup/: mod.rs
src/ui/: menu_button.rs  mod.rs
