[package]
name = "ondth"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]        
bevy                   = { workspace = true }
map_parser             = { workspace = true }
macros                 = { workspace = true }
faststr                = { workspace = true }
bevy_rapier3d          = { workspace = true }
serde                  = { workspace = true }
bevy_obj               = { workspace = true }
bevy-scene-hook        = { workspace = true }
bevy_simple_text_input = { workspace = true }
bincode                = { workspace = true }
bevy_renet             = { workspace = true }
renet_steam            = { workspace = true }
steamworks             = { workspace = true }
image                  = { workspace = true }
bevy_hanabi            = { workspace = true }
integrity              = { workspace = true }
resources              = { workspace = true }
qwak_helper_types      = { workspace = true }
qwak_shared            = { workspace = true }
qwak                   = { workspace = true }

[lints]
workspace = true

[workspace]
members = [ "crates/*", "qwaks/*" ]

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code  = "deny"

[workspace.lints.clippy]
print_stdout                  = "warn"
print_stderr                  = "warn"
# missing_docs_in_private_items = "warn"
missing_errors_doc            = "warn"
missing_panic_doc             = "warn"
missing_unsafe_doc            = "warn"
undocumented_unsafe_blocks    = "warn"
unnecessary_safety_comment    = "warn"
unnecessary_safety_doc        = "warn"

[workspace.dependencies]
serde                  = { version = "1.0.*" }
serde_json             = { version = "1.0.*" }
bincode                = { version = "1.3.*" }
steamworks             = { version = "0.11.*" }
sha256                 = { version = "1.5.*", default-features = false }
image                  = { version = "0.25.*", default-features = false }
proc-macro2            = { version = "1.0.*" }
quote                  = { version = "1.0.*" }
syn                    = { version = "2.0.*" }
rand                   = { version = "0.8.*" }
extism                 = { version = "1.9.*", default-features = false, features = ["register-filesystem"] }
extism-pdk             = { version = "1.3.*", default-features = false, features = ["msgpack", "extism-manifest"] }

# Bevy dependencies
bevy                   = { version = "0.15.*", features = ["bevy_gltf", "dynamic_linking"] }
bevy_rapier3d          = { version = "0.28.*", features = ["parallel","debug-render-3d","simd-stable"] }
bevy_obj               = { version = "0.15.*" }
bevy-inspector-egui    = { version = "0.28.*" }
bevy_simple_text_input = { version = "0.10.*" }
bevy-scene-hook        = { git = "https://github.com/AlephCubed/bevy-scene-hook.git" }
bevy_hanabi            = { git = "https://github.com/djeedai/bevy_hanabi.git", default-features = false, features = ["3d"] }
bevy_renet             = { git = "https://github.com/lucaspoffo/renet.git", features = ["steam"] }
renet_steam            = { git = "https://github.com/lucaspoffo/renet.git", features = ["bevy"] }

# Custom crates
map_parser             = { path = "crates/map_parser" }
macros                 = { path = "crates/macros" }
input_derive           = { path = "crates/input_derive" }
faststr                = { path = "crates/faststr" }
integrity              = { path = "crates/integrity" }
resources              = { path = "crates/resources" }
qwak                   = { path = "crates/qwak" }
qwak_shared            = { path = "crates/qwak_shared" }
qwak_macro             = { path = "crates/qwak_macro" }
qwak_helper_types      = { path = "crates/qwak_helper_types" }

[profile.dev.package."*"]
opt-level = 3

[profile.release.package.default]
strip = "debuginfo"